[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Cinzel-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainNavigation/Worldmap/UIMainButtons.gd" type="Script" id=2]
[ext_resource path="res://SPRITES/UI/SlotNormal1.png" type="Texture" id=3]
[ext_resource path="res://SPRITES/UI/SlotHoverl1.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[node name="UIMainButtons" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 1050.0
margin_top = 480.0
margin_right = 1250.0
margin_bottom = 680.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="BackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Back"
align = 1
valign = 1

[node name="CharacterButton" type="TextureButton" parent="."]
margin_left = 1050.0
margin_top = 341.0
margin_right = 1250.0
margin_bottom = 466.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="CharacterButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Character"
align = 1
valign = 1

[node name="InventoryButton" type="TextureButton" parent="."]
margin_left = 1050.0
margin_top = 205.0
margin_right = 1250.0
margin_bottom = 328.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="InventoryButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Inventory"
align = 1
valign = 1

[node name="CraftingButton" type="TextureButton" parent="."]
margin_left = 1050.0
margin_top = 65.8147
margin_right = 1250.0
margin_bottom = 188.815
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="CraftingButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Crafting"
align = 1
valign = 1

[connection signal="pressed" from="BackButton" to="." method="backToMain"]
[connection signal="pressed" from="CharacterButton" to="." method="gotoCharacter"]
[connection signal="pressed" from="InventoryButton" to="." method="gotoInventory"]
[connection signal="pressed" from="CraftingButton" to="." method="gotoCrafting"]
